--- a/src/crypto/CMakeLists.txt
+++ b/src/crypto/CMakeLists.txt
@@ -5,10 +5,14 @@ target_sources(crypto
         ${CMAKE_CURRENT_LIST_DIR}/DiffieHellman.cpp
         ${CMAKE_CURRENT_LIST_DIR}/SHA256.cpp
         ${CMAKE_CURRENT_LIST_DIR}/DigitalSignature.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/Certificate.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/CertificateStore.cpp
         PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/DiffieHellman.h
         ${CMAKE_CURRENT_LIST_DIR}/SHA256.h
         ${CMAKE_CURRENT_LIST_DIR}/DigitalSignature.h
+        ${CMAKE_CURRENT_LIST_DIR}/Certificate.h
+        ${CMAKE_CURRENT_LIST_DIR}/CertificateStore.h
         )
 
 target_include_directories(crypto
