--- a/src/crypto/CMakeLists.txt
+++ b/src/crypto/CMakeLists.txt
@@ -7,12 +7,14 @@ target_sources(crypto
         ${CMAKE_CURRENT_LIST_DIR}/DigitalSignature.cpp
         ${CMAKE_CURRENT_LIST_DIR}/Certificate.cpp
         ${CMAKE_CURRENT_LIST_DIR}/CertificateStore.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/AuthenticatedEncryption.cpp
         PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/DiffieHellman.h
         ${CMAKE_CURRENT_LIST_DIR}/SHA256.h
         ${CMAKE_CURRENT_LIST_DIR}/DigitalSignature.h
         ${CMAKE_CURRENT_LIST_DIR}/Certificate.h
         ${CMAKE_CURRENT_LIST_DIR}/CertificateStore.h
+        ${CMAKE_CURRENT_LIST_DIR}/AuthenticatedEncryption.h
         )
 
 target_include_directories(crypto
