Add new constants and refactoring of existing ones

--- a/src/socket/CMakeLists.txt
+++ b/src/socket/CMakeLists.txt
@@ -13,3 +13,4 @@ target_include_directories(socket
         )
 
 target_link_libraries(socket PRIVATE exception)
+target_link_libraries(socket PRIVATE utils)
