--- a/src/message/CMakeLists.txt
+++ b/src/message/CMakeLists.txt
@@ -5,10 +5,12 @@ target_sources(message
         ${CMAKE_CURRENT_LIST_DIR}/Message.cpp
         ${CMAKE_CURRENT_LIST_DIR}/ClientHello.cpp
         ${CMAKE_CURRENT_LIST_DIR}/ServerHello.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/EndHandshake.cpp
         PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/Message.h
         ${CMAKE_CURRENT_LIST_DIR}/ClientHello.h
         ${CMAKE_CURRENT_LIST_DIR}/ServerHello.h
+        ${CMAKE_CURRENT_LIST_DIR}/EndHandshake.h
         )
 
 target_include_directories(message
