--- a/src/message/CMakeLists.txt
+++ b/src/message/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(message
         ${CMAKE_CURRENT_LIST_DIR}/EndHandshake.cpp
         ${CMAKE_CURRENT_LIST_DIR}/InfoMessage.cpp
         ${CMAKE_CURRENT_LIST_DIR}/PlayerList.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/Challenge.cpp
         PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/Message.h
         ${CMAKE_CURRENT_LIST_DIR}/ClientHello.h
@@ -15,6 +16,7 @@ target_sources(message
         ${CMAKE_CURRENT_LIST_DIR}/EndHandshake.h
         ${CMAKE_CURRENT_LIST_DIR}/InfoMessage.h
         ${CMAKE_CURRENT_LIST_DIR}/PlayerList.h
+        ${CMAKE_CURRENT_LIST_DIR}/Challenge.h
         )
 
 target_include_directories(message
