--- a/src/socket/CMakeLists.txt
+++ b/src/socket/CMakeLists.txt
@@ -3,8 +3,10 @@ add_library(socket)
 target_sources(socket
         PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}/TcpSocket.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/InputMultiplexing.cpp
         PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/TcpSocket.h
+        ${CMAKE_CURRENT_LIST_DIR}/InputMultiplexing.h
         )
 
 target_include_directories(socket
