Add class representing a player

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(crypto)
 add_subdirectory(exception)
+add_subdirectory(game)
 add_subdirectory(message)
 add_subdirectory(socket)
 add_subdirectory(utils)
