Add new constants and utility functions. Modify message types

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -15,4 +15,5 @@ target_include_directories(utils
         )
 
 find_package(OpenSSL 1.1.1 REQUIRED)
-target_link_libraries(utils PUBLIC OpenSSL::Crypto)
+target_link_libraries(utils PUBLIC game)
+target_link_libraries(utils PRIVATE OpenSSL::Crypto)
