--- a/src/socket/CMakeLists.txt
+++ b/src/socket/CMakeLists.txt
@@ -4,11 +4,11 @@ target_sources(socket
         PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}/TcpSocket.cpp
         ${CMAKE_CURRENT_LIST_DIR}/TcpSocketHasher.cpp
-        ${CMAKE_CURRENT_LIST_DIR}/InputMultiplexing.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/InputMultiplexer.cpp
         PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/TcpSocket.h
         ${CMAKE_CURRENT_LIST_DIR}/TcpSocketHasher.h
-        ${CMAKE_CURRENT_LIST_DIR}/InputMultiplexing.h
+        ${CMAKE_CURRENT_LIST_DIR}/InputMultiplexer.h
         )
 
 target_include_directories(socket
