--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -3,8 +3,10 @@ add_library(game)
 target_sources(game
         PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}/Player.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/FourInARow.cpp
         PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/Player.h
+        ${CMAKE_CURRENT_LIST_DIR}/FourInARow.h
         )
 
 target_include_directories(game
